--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -124,7 +124,7 @@
   "tutorial.comment_this": "<prefix><gray>Leave some feedback on this plot: <plot>.</gray>",
 
   "economy.econ_disabled": "<prefix><red>Economy is not enabled.</red>",
-  "economy.cannot_afford_plot": "<prefix><red>You cannot afford to buy this plot. It costs <gold><money></gold>.</red>",
+  "economy.cannot_afford_plot": "<prefix><red>You cannot afford to buy this plot. It costs <gold><money></gold>. You have <gold><balance></gold>.</red>",
   "economy.not_for_sale": "<prefix><red>This plot is not for sale.</red>",
   "economy.cannot_buy_own": "<prefix><red>You cannot buy your own plot.</red>",
   "economy.plot_sold": "<prefix><dark_aqua>Your plot; <gold><plot></gold>, has been sold to <gold><player></gold> for <gold><price></gold>.</dark_aqua>",
