Fix flag description

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -551,9 +551,9 @@
   "flag.flag_list_categories": "<gold><category>: </gold>",
   "flag.flag_list_flag": "<click:run_command:<command>><hover:show_text:\"<gray>Click to view information about the flag.</gray>\"><gray><flag></gray></hover></click><gray><suffix></gray>",
   "flag.flag_info_name": "<gray>Name: <gold><flag></gold></gray>",
-  "flag.flag_info_category": "<gray>Category: </gray>",
+  "flag.flag_info_category": "<gray>Category: </gray><gold><value></gold>",
   "flag.flag_info_description": "<gray>Description: </gray>",
-  "flag.flag_info_example": "<gray>Example: <click:suggest_command:/plot flag set <flag> <value>><gold>/plot flag set <flag> <value><click></gold></gray>",
+  "flag.flag_info_example": "<gray>Example: <click:suggest_command:/plot flag set <flag> <value>><gold>/plot flag set <flag> <value></click></gold></gray>",
   "flag.flag_info_default_value": "<gray>Default Value: <value></gray>",
 
   "flags.flag_category_string": "<gray>String Flags</gray>",
@@ -579,7 +579,7 @@
   "flags.flag_description_untrusted": "<gray>Set to `false` to disallow untrusted players from visiting the plot.</gray>",
   "flags.flag_description_deny_exit": "<gray>Set to `true` to disallow players from exiting the plot.</gray>",
   "flags.flag_description_chat": "<gray>Set to `false` to prevent plot chat on the plot.</gray>",
-  "flags.flag_description_description": "<gray>Plot description. Supports '&' color codes.</gray>",
+  "flags.flag_description_description": "<gray>Plot description. Supports MiniMessage/Adventure.</gray>",
   "flags.flag_description_greeting": "<gray>Message sent to players on plot entry. Supports '&' color codes.</gray>",
   "flags.flag_description_farewell": "<gray>Message sent to players when leaving the plot. Supports '&' color codes.</gray>",
   "flags.flag_description_weather": "<gray>Specifies the weather conditions inside of the plot.</gray>",
