--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -381,7 +381,7 @@
   "info.plot_info_unclaimed": "<prefix><gray>Plot <gold><plot></gold> is not yet claimed.</gray>",
   "info.plot_info_header": "<dark_gray><strikethrough>--------- <reset><gold>INFO </gold><dark_gray><strikethrough>---------</dark_gray><reset>",
   "info.plot_info_hidden": "<prefix><red>You cannot view the information about this plot.</red>",
-  "info.plot_info_format": "<header>\n<gold>ID: <gray><id></gray>\nArea: <gray><area></gray>\nAlias: <gray><alias></gray>\nOwner: <gray><owner></gray>\nBiome: <gray><biome></gray>\nCan Build: <gray><build></gray>\nRating: <gray><rating></gray>\nSeen: <gray><seen></gray>\nTrusted: <gray><trusted></gray>\nMembers: <gray><members></gray>\nDenied: <gray><denied></gray>\nFlags: <gray><flags></gray>\nDescription: <gray><desc></gray></gold>\n<footer>",
+  "info.plot_info_format": "<header>\n<gold>ID: <gray><id></gray>\nArea: <gray><area></gray>\nAlias: <gray><alias></gray>\nOwner: <gray><owner></gray>\nBiome: <gray><biome></gray>\nCan Build: <gray><build></gray>\nRating: <gray><rating></gray>\nSeen: <gray><seen></gray>\nCreation: <gray><creationdate></gray>\nTrusted: <gray><trusted></gray>\nMembers: <gray><members></gray>\nDenied: <gray><denied></gray>\nFlags: <gray><flags></gray>\nDescription: <gray><desc></gray></gold>\n<footer>",
   "info.plot_info_footer": "<dark_gray><strikethrough>--------- <reset><gold>INFO </gold><dark_gray><strikethrough>---------<reset>",
   "info.plot_info_trusted": "<gold>Trusted:</gold> <gray><trusted></gray>",
   "info.plot_info_members": "<gold>Members:</gold> <gray><members></gray>",
@@ -395,6 +395,7 @@
   "info.plot_info_alias": "<gold>Alias:</gold><gray> <alias></gray>",
   "info.plot_info_size": "<gold>Size:</gold><gray> <size></gray>",
   "info.plot_info_seen": "<gold>Seen:</gold><gray> <seen></gray>",
+  "info.plot_info_creationdate": "<gold>Creation:</gold><gray> <creationdate></gray>",
   "info.plot_user_list": "<gray><user></gray>",
   "info.plot_flag_list": "<gray><flag>: <value></gray>",
   "info.plot_no_description": "<prefix><gray>No description set.</gray>",
