Don't spit NPEs on NonNull values

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -675,7 +675,6 @@
   "commands.description.backup.save": "<gray>Create a plot backup.</gray>",
   "commands.description.backup.list": "<gray>List available plot backups.</gray>",
   "commands.description.backup.load": "<gray>Restore a plot backup</gray>",
-  "commands.description.biome": "<gray>Set the plot biome.</gray>",
   "commands.description.buy": "<gray>Buy the plot you are standing on.</gray>",
   "commands.description.caps": "<gray>Show plot entity caps.</gray>",
   "commands.description.chat": "<gray>Toggles plot chat on or off.</gray>",
@@ -699,7 +698,6 @@
   "commands.description.debugsavetest": "<gray>This command will force the recreation of all plots in the database.</gray>",
   "commands.description.delete": "<gray>Delete the plot you stand on.</gray>",
   "commands.description.deny": "<gray>Deny a user from entering a plot.</gray>",
-  "commands.description.desc": "<gray>Set the plot description.</gray>",
   "commands.description.dislike": "<gray>Dislike the plot.</gray>",
   "commands.description.done": "<gray>Continue a plot that was previously marked as done.</gray>",
   "commands.description.download": "<gray>Download your plot.</gray>",
@@ -724,7 +722,6 @@
   "commands.description.move": "<gray>Move a plot.</gray>",
   "commands.description.music": "<gray>Play music in your plot.</gray>",
   "commands.description.near": "<gray>Display nearby players.</gray>",
-  "commands.description.owner": "<gray>Set the plot owner.</gray>",
   "commands.description.plugin": "<gray>Show plugin information.</gray>",
   "commands.description.purge": "<gray>Purge all plots for a world.</gray>",
   "commands.description.rate": "<gray>Rate a plot.</gray>",
@@ -735,7 +732,10 @@
   "commands.description.save": "<gray>Save your plot.</gray>",
   "commands.description.schematic": "<gray>Manage schematics.</gray>",
   "commands.description.set": "<gray>Set a plot value.</gray>",
+  "commands.description.setbiome": "<gray>Set the plot biome.</gray>",
+  "commands.description.setdescription": "<gray>Set the plot description.</gray>",
   "commands.description.sethome": "<gray>Set the plot home.</gray>",
+  "commands.description.setowner": "<gray>Set the plot owner.</gray>",
   "commands.description.setup": "<gray>Setup wizard for plot worlds.</gray>",
   "commands.description.swap": "<gray>Swap two plots.</gray>",
   "commands.description.target": "<gray>Target a plot with your compass.</gray>",
