Fix more flag message issues.

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -547,7 +547,7 @@
   "flag.flag_partially_removed": "<prefix><dark_aqua>Successfully removed flag value(s).</dark_aqua>",
   "flag.flag_added": "<prefix><dark_aqua>The flag has been added successfully.</dark_aqua>",
   "flag.flag_list_see_info": "<prefix><gray>Click to view information about the flag.</gray>",
-  "flag.flag_parse_error": "<red>Failed to parse flag </red><gray><flag_name></gray><red>, value </red><gray><flag_value></gray><red>Error: <error></red>",
+  "flag.flag_parse_error": "<prefix><red>Failed to parse flag </red><gray><flag_name></gray><red>, value provided </red><gray><flag_value><red>. </red></gray><red>Error: <error></red>",
   "flag.flag_info_header": "<dark_gray><strikethrough>---------<reset> <gold>PlotSquared Flags </gold><dark_gray><strikethrough>---------<reset>",
   "flag.flag_info_footer": "<dark_gray><strikethrough>---------<reset> <gold>PlotSquared Flags </gold><dark_gray><strikethrough>---------<reset>",
   "flag.flag_list_categories": "<gold><category>: </gold>",
@@ -652,20 +652,20 @@
   "flags.flag_description_keep_inventory": "<gray>Prevents players from dropping their items when they die inside of the plot.</gray>",
   "flags.flag_description_prevent_creative_copy": "<gray>Prevents people from copying item NBT data in the plot unless they're added as members.</gray>",
 
-  "flags.flag_error_boolean": "<prefix><red>Flag value must be a boolean (true | false)</red>",
-  "flags.flag_error_enum": "<prefix><red>Must be one of: <list></red>",
-  "flags.flag_error_gamemode": "<prefix><red>Flag value must be a gamemode: 'survival', 'creative', 'adventure' or 'spectator.</red>",
-  "flags.flag_error_integer": "<prefix><red>Flag value must be a whole number.</red>",
-  "flags.flag_error_integer_list": "<prefix><red>Flag value must be an integer list.</red>",
-  "flags.flag_error_keep": "<prefix><red>Flag value must be a timestamp or a boolean.</red>",
-  "flags.flag_error_long": "<prefix><red>Flag value must be a whole number (large numbers allowed).</red>",
-  "flags.flag_error_plotblocklist": "<prefix><red>Flag value must be a block list.</red>",
-  "flags.flag_error_invalid_block": "<prefix><red>The provided value is not a valid block or block category.</red>",
-  "flags.flag_error_double": "<prefix><red>Flag value must be a decimal number.</red>",
-  "flags.flag_error_string": "<prefix><red>Flag value must be alphanumeric. Some special characters are allowed.</red>",
-  "flags.flag_error_stringlist": "<prefix><red>Flag value must be a string list.</red>",
-  "flags.flag_error_weather": "<prefix><red>Flag must be a weather: 'rain' or 'sun'.</red>",
-  "flags.flag_error_music": "<prefix><red>Flag value must be a valid music disc ID.</red>",
+  "flags.flag_error_boolean": "<prefix>Flag value must be a boolean (true | false).",
+  "flags.flag_error_enum": "<prefix>Must be one of: <list>",
+  "flags.flag_error_gamemode": "<prefix>Flag value must be a gamemode: 'survival', 'creative', 'adventure' or 'spectator.",
+  "flags.flag_error_integer": "<prefix>Flag value must be a whole number.",
+  "flags.flag_error_integer_list": "<prefix>Flag value must be an integer list.",
+  "flags.flag_error_keep": "<prefix>Flag value must be a timestamp or a boolean.",
+  "flags.flag_error_long": "<prefix>Flag value must be a whole number (large numbers allowed).",
+  "flags.flag_error_plotblocklist": "<prefix>Flag value must be a block list.",
+  "flags.flag_error_invalid_block": "<prefix>The provided value is not a valid block or block category.",
+  "flags.flag_error_double": "<prefix>Flag value must be a decimal number.",
+  "flags.flag_error_string": "<prefix>Flag value must be alphanumeric. Some special characters are allowed.",
+  "flags.flag_error_stringlist": "<prefix>Flag value must be a string list.",
+  "flags.flag_error_weather": "<prefix>Flag must be a weather: 'rain' or 'sun'.",
+  "flags.flag_error_music": "<prefix>Flag value must be a valid music disc ID.",
 
   "commands.description.add": "<gray>Allow a user to build in a plot while the plot owner is online.</gray>",
   "commands.description.alias": "<gray>Set the plot alias.</gray>",
