fix two <> errors in lang

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -257,7 +257,7 @@
   "condense.task_already_stopped": "<prefix><gold>Task already stopped.</gold>",
   "condense.task_stopped": "<prefix><gold>Task already stopped.</gold>",
   "condense.default_eval": "<dark_gray><strikethrough>=== <reset> <gold>DEFAULT EVAL </gold><dark_gray><strikethrough>===</dark_gray>",
-  "condense.minimum_radius": "<gold><Minimum radius: </gold><gray><minimumRadius></gray>",
+  "condense.minimum_radius": "<gold>Minimum radius: </gold><gray><minimumRadius></gray>",
   "condense.maximum_moved": "<gold>Maximum moved: </gold><gray><maximumMoves></gray>",
   "condense.input_eval": "<dark_gray><strikethrough>=== <reset> <gold>INPUT EVAL </gold><dark_gray><strikethrough>===</dark_gray>",
   "condense.input_radius": "<gold>Input radius: </gold><gray><radius></gray>",
@@ -322,7 +322,7 @@
   "errors.plotworld_incompatible": "<prefix><red>The two worlds must be compatible.</red>",
   "errors.not_valid_world": "<prefix><red>That is not a valid world (case sensitive).</red>",
   "errors.not_valid_plot_world": "<prefix><gray><value></gray><red> is not a valid plot area (case sensitive).</red>",
-  "errors.invalid_plot_world": "<prefix><redThat is not a valid plot area (case sensitive).</red>",
+  "errors.invalid_plot_world": "<prefix><red>That is not a valid plot area (case sensitive).</red>",
   "errors.no_plots": "<prefix><gray>You don't have any plots.</gray>",
   "errors.player_no_plots": "<prefix><gray>That player does not own any plots.</gray>",
   "errors.wait_for_timer": "<prefix><gray>A set block timer is bound to either the current plot or you. Please wait for it to finish.</gray>",
