Remove duplicated translation strings

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -177,7 +177,7 @@
   "permission.no_permission_event": "<prefix><red>You are lacking the permission node: <gold><node></gold>.</red>",
   "permission.no_plot_perms": "<prefix><red>You must be the plot owner to perform this action.</red>",
   "permission.cant_claim_more_plots": "<prefix><red>You can't claim more than <gold><amount> </gold>plots.</red>",
-  "permission.cant_claim_more_clusters": "<prefix><red>You can't claim more clusters.</red>",
+  "permission.cant_claim_more_clusters": "<prefix><red>You can't claim more than <gold><amount> </gold>clusters.</red>",
   "permission.cant_transfer_more_plots": "<prefix><red>You can't send more plots to that user.</red>",
   "permission.cant_claim_more_plots_num": "<prefix><red>You can't claim more than <gold><amount> </gold>plots at once.</red>",
   "merge.merge_request_confirm": "<prefix><gray>Merge request from </gray><gold><player></gold><gray>.</gray>",
@@ -211,12 +211,10 @@
   "condense.radius_too_small": "<prefix><red>Radius too small.</red>",
   "condense.no_free_plots_found": "<prefix><red>No free plots found.</red>",
   "condense.task_started": "<prefix><gold>Task started...</gold>",
-  "condense.task_cancelled": "<prefix><gold>Task cancelled.</gold>",
   "condense.task_complete": "<prefix><gold>Task complete. Please verify that no new plots have been claimed during the task.</gold>",
   "condense.moving": "<gold>Moving: </gold><gray><origin></gray><gold> -> </gold><green><possible></green>",
   "condense.task_failed": "<prefix><red>Task failed. No free plots found.</red>",
   "condense.skipping": "<prefix><red>Skipping complex plot: </red><gold><plot></gold><red>.</red>",
-  "condense.task_already_stopped": "<prefix><gold>Task already stopped.</gold>",
   "condense.task_stopped": "<prefix><gold>Task already stopped.</gold>",
   "condense.default_eval": "<dark_gray><strikethrough>=== <reset> <gold>DEFAULT EVAL </gold><dark_gray><strikethrough>===</dark_gray>",
   "condense.minimum_radius": "<gold>Minimum radius: </gold><gray><minimumRadius></gray>",
@@ -244,7 +242,6 @@
   "debugexec.threshold_default_double": "<prefix><gray><gold><threshold> </gold><gray>= </gray><gold>The percentage of plots you want to clear as a number between 0 - 100.</gold>",
   "debugexec.calibration_done": "<prefix><gold>Thank you for calibrating plot expiry.</gold>",
   "debugexec.task_halted": "<prefix><gray>Task already halted.</gray>",
-  "debugexec.cancelling_task": "<prefix><red>Task cancelled.</red>",
   "debugexec.task_cancelled": "<prefix><gold>Task cancelled.</gold>",
   "debugexec.cleared_flag": "<prefix><gold>Cleared flag: </gold><dark_aqua><value></dark_aqua>",
   "debugexec.mass_schematic_update_in_progress": "<prefix><red>Cannot schedule mass schematic update. (Is one already in progress?)</red>",
