Fix backup captions and add placeholders to copy/move/swap

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -2,9 +2,9 @@
   "confirm.expired_confirm": "<prefix><red>Confirmation has expired, please run the command again!</red>",
   "confirm.failed_confirm": "<prefix><red>You have no pending actions to confirm!</red>",
   "confirm.requires_confirm": "<prefix><gray>Are you sure you wish to execute: </gray><gold><command></gold><gray>?</gray>\n<red>This cannot be undone! If you are sure: </red><gray><value></gray>",
-  "move.move_success": "<prefix><dark_aqua>Successfully moved plot.</dark_aqua>",
+  "move.move_success": "<prefix><dark_aqua>Successfully moved the plot</dark_aqua> <gold><origin></gold><dark_aqua> -> </dark_aqua><gold><target></gold>",
   "move.move_merged": "<prefix><red>Merged plots may not be moved. Please unmerge the plot before performing the move.</red>",
-  "move.copy_success": "<prefix><dark_aqua>Successfully copied plot.</dark_aqua>",
+  "move.copy_success": "<prefix><dark_aqua>Successfully copied plots</dark_aqua> <gold><origin></gold><dark_aqua> -> </dark_aqua><gold><target></gold>",
   "move.requires_unowned": "<prefix><red>The location specified is already occupied.</red>",
   "debug.requires_unmerged": "<prefix><red>The plot cannot be merged.</red>",
   "debug.debug_header": "<prefix> <gold>Debug Information</gold>\n",
@@ -60,7 +60,7 @@
   "notification.notify_enter": "<prefix><gray><player> entered your plot (</gray><gold><plot></gold><gray>).</gray>",
   "notification.notify_leave": "<prefix><gray><player> left your plot (</gray><gold><plot></gold><gray>).</gray>",
   "swap.swap_overlap": "<prefix><red>The proposed areas are not allowed to overlap.</red>",
-  "swap.swap_success": "<prefix><dark_aqua>Successfully swapped plots.</dark_aqua>",
+  "swap.swap_success": "<prefix><dark_aqua>Successfully swapped plots</dark_aqua> <gold><origin></gold><dark_aqua> -> </dark_aqua><gold><target></gold>",
   "swap.swap_merged": "<prefix><red>Merged plots may not be swapped. Please unmerge the plots before performing the swap.</red>",
   "swap.progress_region1_copy": "<prefix><gray>Current region 1 copy progress: </gray><gold><progress></gold><gray>%</gray>",
   "swap.progress_region2_copy": "<prefix><gray>Current region 2 copy progress: </gray><gold><progress></gold><gray>%</gray",
@@ -414,7 +414,7 @@
   "grants.granted_plots": "<prefix><gold>Result: <gray><amount> </gray>grants left.</gold>",
   "grants.added": "<prefix><gold><grants></gold> <gray>grant(s) have been added.</gray>",
   "events.event_denied": "<prefix><gold><value> </gold><gray>Cancelled by external plugin.</gray>",
-  "backups.backup_impossible": "<prefix><gray>Backups are not enabled for this plot: <plot>.</gray>",
+  "backups.backup_impossible": "<prefix><red>Backups are not enabled for this plot: <plot>.</red>",
   "backups.backup_save_success": "<prefix><gold>The backup was created successfully.</gold>",
   "backups.backup_save_failed": "<prefix><red>The backup could not be created: </red><gray><reason></gray>",
   "backups.backup_load_success": "<prefix><gold>The backup was restored successfully.</gold>",
