Strip commands from translation files

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -398,7 +398,7 @@
   "help.help_header": "<dark_gray><strikethrough>---------<reset> <gold>PlotSquared Help </gold><dark_gray><strikethrough>---------<reset>",
   "help.help_page_header": "\n<gold>Category: </gold><gray><category>,</gray><gold> Page: </gold><gray><current></gray><dark_gray>/</dark_gray><gray><max></gray>\n",
   "help.help_footer": "<dark_gray><strikethrough>---------<reset> <gold>PlotSquared Help </gold><dark_gray><strikethrough>---------<reset>",
-  "help.help_info_item": "<gold>/plot help <gray><category> </gray><dark_gray>- </dark_gray><gray><category_desc></gray>",
+  "help.help_info_item": "<gold><command> <gray><category> </gray><dark_gray>- </dark_gray><gray><category_desc></gray>",
   "help.help_item": "<gold><usage> <gray>[<gold><alias></gold>]</gray>\n <dark_gray>- </dark_gray><gray><desc></gray>\n",
   "help.help_display_all_commands": "<prefix><gray>Display all commands.</gray>",
   "help.direction": "<prefix><gold>Current direction: </gold><gray><dir></gray>",
@@ -475,7 +475,7 @@
   "flag.flag_info_name": "<gray>Name: <gold><flag></gold></gray>",
   "flag.flag_info_category": "<gray>Category: </gray><gold><value></gold>",
   "flag.flag_info_description": "<gray>Description: </gray>",
-  "flag.flag_info_example": "<gray>Example: <click:suggest_command:/plot flag set <flag> <value>><gold>/plot flag set <flag> <value></click></gold></gray>",
+  "flag.flag_info_example": "<gray>Example: <click:suggest_command:<command> <flag> <value>><gold><command> <flag> <value></click></gold></gray>",
   "flag.flag_info_default_value": "<gray>Default Value: <value></gray>",
   "flags.flag_category_string": "<gray>String Flags</gray>",
   "flags.flag_category_integers": "<gray>Integer Flags</gray>",
