Add flag placeholders to flag commands

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -463,9 +463,9 @@
   "flag.no_flags": "Global flags: None",
   "flag.flag_not_removed": "<prefix><red>The flag could not be removed.</red>",
   "flag.flag_not_added": "<prefix><red>The flag could not be added.</red>",
-  "flag.flag_removed": "<prefix><dark_aqua>The flag has been removed successfully.</dark_aqua>",
+  "flag.flag_removed": "<prefix><dark_aqua>The flag </dark_aqua><gold><flag></gold><dark_aqua> with the value </dark_aqua><gold><value></gold><dark_aqua> has been removed successfully.</dark_aqua>",
   "flag.flag_partially_removed": "<prefix><dark_aqua>Successfully removed flag value(s).</dark_aqua>",
-  "flag.flag_added": "<prefix><dark_aqua>The flag has been added successfully.</dark_aqua>",
+  "flag.flag_added": "<prefix><dark_aqua>The flag</dark_aqua><gold> <flag></gold><dark_aqua> with the value </dark_aqua><gold><value></gold><dark_aqua> has been added successfully.</dark_aqua>",
   "flag.flag_list_see_info": "<prefix><gray>Click to view information about the flag.</gray>",
   "flag.flag_parse_error": "<prefix><red>Failed to parse flag </red><gray><flag_name></gray><red>, value provided </red><gray><flag_value><red>. </red></gray><red>Error: <error></red>",
   "flag.flag_info_header": "<dark_gray><strikethrough>---------<reset> <gold>PlotSquared Flags </gold><dark_gray><strikethrough>---------<reset>",
