--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -197,7 +197,7 @@
   "commandconfig.command_syntax_extended": "<prefix><gold>Usage: </gold><gray><value1> <value2></gray>",
   "commandconfig.flag_tutorial_usage": "<prefix><gold>Have an admin set the flag: </gold><gray><flag></gray>",
   "invalid.component_illegal_block": "<prefix><red>You are not allowed to generate a component containing the block <gray><value></gray></red>",
-  "invalid.not_valid_block": "<prefix><red>That's not a valid block: </red><gray><value></gray>",
+  "invalid.not_valid_block": "<prefix><red><value></red>",
   "invalid.not_allowed_block": "<prefix><red>That block is not allowed: <gray><value></gray></red>",
   "invalid.not_valid_number": "<prefix><red>That's not a valid number within the range: </red><gray><value></gray>",
   "invalid.not_valid_plot_id": "<prefix><red>That's not a valid plot ID.</red>",
